@@ -2927,6 +2927,7 @@ if test "x$enable_dbus" != "xno"; then
 			V_INCLS="$V_INCLS $DBUS_CFLAGS"
 			ADDITIONAL_LIBS="$ADDITIONAL_LIBS $DBUS_LIBS"
 			ADDITIONAL_LIBS_STATIC="$ADDITIONAL_LIBS_STATIC $DBUS_LIBS_STATIC"
+			LIBS_PRIVATE="$LIBS_PRIVATE $DBUS_LIBS"
 			REQUIRES_PRIVATE="$REQUIRES_PRIVATE dbus-1"
 		    ],
 		    [
