@@ -79,7 +79,8 @@
 #include <openssl/evp.h>
 #include <openssl/err.h>
 
-#if (OPENSSL_VERSION_NUMBER >= 0x10100000L) && !defined LIBRESSL_VERSION_NUMBER
+#if ((OPENSSL_VERSION_NUMBER >= 0x10100000L) && !defined LIBRESSL_VERSION_NUMBER) || \
+    (defined LIBRESSL_VERSION_NUMBER && LIBRESSL_VERSION_NUMBER >= 0x3050000fL)
 /* Technically some of these things were added in 0x10100006
  * but that was pre-release. */
 #define HAVE_OPAQUE_STRUCTS 1
@@ -491,6 +492,22 @@ int lua_push_ecdhparams(lua_State *L, EVP_PKEY *pubkey) {
     /* According to RFC 5480 section 2.1.1, explicit curves must not be used with
        X.509. This may change in the future, but for now it doesn't seem worth it
        to add in code to extract the extra parameters. */
+#if defined(LIBRESSL_VERSION_NUMBER)
+    /* LibreSSL doesn't have EC_GROUP_get_field_type, and explicit curves are rare.
+     * Just mark as UNKNOWN. */
+    lua_pushstring(L, "UNKNOWN");
+#elif HAVE_OPAQUE_STRUCTS
+    nid = EC_GROUP_get_field_type(group);
+    if (nid == NID_X9_62_prime_field) {
+      lua_pushstring(L, "explicit_prime");
+    }
+    else if (nid == NID_X9_62_characteristic_two_field) {
+      lua_pushstring(L, "explicit_char2");
+    }
+    else {
+      lua_pushstring(L, "UNKNOWN");
+    }
+#else
     nid = EC_METHOD_get_field_type(EC_GROUP_method_of(group));
     if (nid == NID_X9_62_prime_field) {
       lua_pushstring(L, "explicit_prime");
@@ -499,9 +516,9 @@ int lua_push_ecdhparams(lua_State *L, EVP_PKEY *pubkey) {
       lua_pushstring(L, "explicit_char2");
     }
     else {
-      /* Something weird happened. */
       lua_pushstring(L, "UNKNOWN");
     }
+#endif
     lua_setfield(L, -2, "ec_curve_type");
   }
   lua_setfield(L, -2, "curve_params");
