@@ -414,7 +414,13 @@ int do_actual_pcap_read(struct nevent *nse) {
   switch (rc) {
     case 1: /* read good packet  */
 #ifdef PCAP_RECV_TIMEVAL_VALID
+#ifdef __OpenBSD__
+      /* OpenBSD has bpf_timeval which is incompatible with struct timeval */
+      npp.ts.tv_sec  = pkt_header->ts.tv_sec;
+      npp.ts.tv_usec = pkt_header->ts.tv_usec;
+#else
       npp.ts     = pkt_header->ts;
+#endif
 #else
       /* On these platforms time received from pcap is invalid.
        * It's better to set current time */
@@ -517,4 +523,3 @@ int nsock_iod_is_pcap(nsock_iod iod) {
 }
 
 #endif /* HAVE_PCAP */
-
